--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.20",
     "md5": "^2.3.0",
     "mysql2": "^2.2.5",
+    "puppeteer": "^19.6.3",
     "readline": "^1.3.0",
     "string_decoder": "^1.3.0",
     "typescript-require": "^0.2.10",
